[package]
name = "gmt-lom"
version = "2.2.1"
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope Geometric Linear Optical Transformations"
repository = "https://github.com/rconan/gmt-lom"
documentation = "https://docs.rs/gmt-lom"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]
default-run = "main"
exclude = ["lompy/"]

[dependencies]
num-complex = { version = "0.4.2" }
bincode = "1.3.3"
nalgebra = "0.32.1"
serde = { version = "1.0.131", features = ["derive"] }
thiserror = "1.0.30"
crseo = { version = "0.8.0", optional = true }
skyangle = "0.2"
anyhow = "1.0.51"
complot = { version = "0.3.1", features = ["png"], optional = true }
arrow = { version = "30.0", optional = true }
parquet = { version = "30.0", optional = true }
structopt = "0.3.26"
welch-sde = { version = "0.1.0", optional = true }
serde-pickle = "1.1.0"
csv = "1.1.6"
fsm = { version = "1.0.0", package = "m2-ctrl", features = [
    "fsm",
], optional = true }

[features]
apache = ["arrow", "parquet"]
main = ["apache", "complot", "welch-sde"]

[[bin]]
name = "main"
required-features = ["main"]

[[bin]]
name = "makesens"
required-features = ["crseo"]

[package.metadata.docs.rs]
features = ["apache"]
