[package]
name = "gmt-lom"
version = "2.6.0"
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope Geometric Linear Optical Transformations"
repository = "https://github.com/rconan/gmt-lom"
documentation = "https://docs.rs/gmt-lom"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]
default-run = "main"
exclude = ["lompy/"]

[dependencies]
num-complex = { version = "0.4.2" }
bincode = "1.3.3"
nalgebra = "0.33"
serde = { version = "1.0.131", features = ["derive"] }
thiserror = "1.0.30"
crseo = { version = "0.8.0", optional = true }
skyangle = "0.2"
anyhow = "1.0.51"
complot = { version = "0.3.1", features = ["png"], optional = true }
arrow = { version = "55.1", optional = true }
parquet = { version = "55.1", optional = true }
structopt = "0.3.26"
welch-sde = { version = "0.1.0", optional = true }
serde-pickle = "1.1.0"
csv = "1.1.6"
fsm = { version = "1.0.0", package = "m2-ctrl", features = [
  "fsm",
], optional = true }
clap = { version = "4.4.12", optional = true, features = ["derive"] }
object_store = { version = "0.12.3", optional = true, features = ["aws"] }
futures = { version = "0.3.31", optional = true }
bytes = { version = "1.3", optional = true }
faer-ext = { version = "0.6.0", features = ["nalgebra"], optional = true }
faer = { version = "0.22.6", optional = true }
log = "0.4.27"
env_logger = "0.11.8"

[features]
default = ["object_store"]
apache = ["arrow", "parquet"]
object_store = [
  "dep:object_store",
  "apache",
  "parquet/object_store",
  "parquet/async",
  "futures",
  "bytes",
]
futures = ["dep:futures"]
bytes = ["dep:bytes"]
main = ["apache", "complot", "welch-sde", "clap"]
faer = ["dep:faer", "dep:faer-ext"]
clap = ["dep:clap"]

[[bin]]
name = "main"
required-features = ["main"]

[[bin]]
name = "makesens"
required-features = ["crseo"]

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
features = ["object_store"]
